--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -11,9 +11,10 @@ $georgia = Georgia, Cambria, "Times New Roman", Times, serif
 $lucidia-grande = "Lucida Grande", Tahoma, Verdana, Arial, sans-serif
 $monospace = unquote("'Bitstream Vera Sans Mono', Consolas, Courier, monospace")
 $verdana = Verdana, Geneva, sans-serif
+$quick-sand = 'Quicksand', sans-serif
 
 // Default font settings
-$font-stack = $helvetica-neue
+$font-stack = $quick-sand
 $font-size = 16
 $font-color = #555
 
