--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -4,5 +4,58 @@ normalize-css()
 base()
 
 body
-  padding: 50px
-  background-color: $cloud
+  margin: 0
+  padding: 0
+
+  display: flex
+  flex-direction: column
+  background: url(https://static.pexels.com/photos/130111/pexels-photo-130111.jpeg) no-repeat bottom fixed;
+  background-size: cover;
+
+
+#big-header
+  height: 90vh
+  padding: 0
+  position: relative
+
+  display: flex
+  align-items: center
+  justify-content: center
+  background: rgba(0, 0, 0, 0.6);
+
+  #header-container
+    color: rgba(#fff,1)
+    h1
+      font-size: 4em
+      margin-bottom: 0
+      font-weight: 300
+    h2
+      margin-top: 0.6em
+    button
+      transition: border-color 0.4s, background-color 0.4s
+      transition-timing-function : $ease-in-out-swift
+      button(rgba(#fff,0),large,#fff)
+      border: 3px solid #fff
+      &:hover
+        background-color: #fff
+        color: #555
+        border: 3px solid #fff
+
+footer
+  height: 10vh
+  padding: 0 10px
+
+  display: flex
+  align-items: center
+  justify-content: space-between
+
+  color: #fff
+  background-color: rgba(0, 0, 0, 0.8)
+
+  #col-1
+    display: flex
+    align-item: bottom
+
+    div
+      margin: 5px
+      align-self: bottom
