--- a/views/index.jade
+++ b/views/index.jade
@@ -1,69 +1,10 @@
 extends layout
 
 block content
-  section#big-header
-    h1 Makapala
-    h2 Kumpulan Makhulu Makhluk Gila
-    a(href="#")#button-join.button Join Us
+  main
+    section#big-header
+      #header-container
+        h1 Welcome to Makapala Website
+        h2 Satu Nyawa, Gak Banyak-Banyak
+        button Tombol Video
 
-  section#about
-    h2 Who Are We?
-    :marked
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nit
-      aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.
-    h2 Visi Misi
-    :marked
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nit
-      aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.
-    h2 Sejarah
-    :marked
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nit
-      aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.
-
-    section#event
-      h2 Upcoming Event
-      div
-        .event-pict
-          img
-        span.date 21 Januari 2016
-        :marked
-          A Leged was born
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui
-          officia deserunt mollit anim id est laborum.
-
-    section#contact
-      form
-        fieldset
-          legend Get in Touch
-          p
-            input#name(type='text' name'name' placeholder='Your Ugly Name')
-            label(for='name')
-          p
-            input#email(type='email' name'email' placeholder='Your Email')
-            label(for='email')
-          p
-            textarea
