--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -42,7 +42,7 @@ $turquoise     = #1abc9c
 $emerald       = #2ecc71
 $peter-river   = #3498db
 $amethyst      = #9b59b6
-$wet-asphalt   = #9b59b6
+$wet-asphalt   = #34495e
 $green-sea     = #16a085
 $nephritis     = #27ae60
 $belize-hole   = #2980b9
