--- a/views/_footer.jade
+++ b/views/_footer.jade
@@ -2,7 +2,7 @@ footer
   div#col-1
     div
       span info@makapala.org
-      address Jln. Tgk. Apa  Dimana Gitu, Aceh
+      address Jln. Tgk. Apa  Dimana Gitu, Bogor
     div
       just another column probably for sosmed
   div#col-2
