--- a/views/_footer.jade
+++ b/views/_footer.jade
@@ -1,9 +1,8 @@
 footer
-  div#col-1
-    div
-      span info@makapala.org
-      address Jln. Tgk. Apa  Dimana Gitu, Bogor
-    div
-      just another column probably for sosmed
-  div#col-2
+  #col-1
+    span info@makapala.org
+    address Jln. Tgk. Apa  Dimana Gitu, Bogor
+  #col-2
+    span just another column probably for sosmed
+  #col-2
     span Made with &hearts; by muhajir
