--- a/views/index.jade
+++ b/views/index.jade
@@ -2,9 +2,21 @@ extends layout
 
 block content
   main
-    section#big-header
+    section#big-header.section
       #header-container
         h1 Welcome to Makapala Website
         h2 Satu Nyawa, Gak Banyak-Banyak
         button Tombol Video
-
+      div
+        h2 test
+    section#big-header.section
+      #header-container
+        h1 Welcome to Makapala Website
+        h2 Satu Nyawa, Gak Banyak-Banyak
+        button Tombol Video
+    section.section
+      h2 Section 2
+    section.section
+      h2 Section 3
+    section.section
+      h2 Section 4
