adjust section colors

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,16 +7,23 @@ block content
         h1 Welcome to Makapala Website
         h2 Satu Nyawa, Gak Banyak-Banyak
         button Tombol Video
-      div
-        h2 test
-    section#big-header.section
-      #header-container
-        h1 Welcome to Makapala Website
-        h2 Satu Nyawa, Gak Banyak-Banyak
-        button Tombol Video
-    section.section
-      h2 Section 2
-    section.section
-      h2 Section 3
-    section.section
-      h2 Section 4
+      #info
+        #address
+          address
+            | Jln. Tgk. Abdullah, No.20, Bogor
+            br
+            | Jawa Barat, Indonesia
+        #social-media
+          span some social media icon here
+        #email
+          span info@makapala.org
+
+    section.section#section-2
+      .general-container
+        h2 Who are We?
+
+    section.section#section-3
+      h2 Upcoming Events
+
+    section.section#section-4
+      h2 Get in Touch
