--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -8,6 +8,11 @@ base()
 button
     button(rgba(#fff,0),large,#fff)
 
+.section
+  padding: 10px
+
+
+
 body
   margin: 0
   padding: 0
@@ -19,10 +24,8 @@ body
 
 
 #big-header
-  height: 90vh
   padding: 0
   position: relative
-
   display: flex
   align-items: center
   justify-content: center
@@ -44,6 +47,26 @@ body
         background-color: #fff
         color: #555
         border: 3px solid #fff
+  #info
+    position: absolute
+    height: 10vh
+    width: 100%
+    top: 90vh
+    display: flex
+    align-items: center
+    justify-content: space-between
+    background-color: rgba(0, 0, 0, 0.18)
+    color: #fafafa
+
+#section-2
+  background-color: $turquoise
+
+#section-3
+  background-color: $peter-river
+
+#section-4
+  background-color: #666
+
 
 footer
   height: 10vh
