--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -1,5 +1,4 @@
 @import '_settings'
-@import '_fullpage'
 
 normalize-css()
 base()
@@ -8,8 +7,9 @@ base()
 button
     button(rgba(#fff,0),large,#fff)
 
-.section
+section
   padding: 10px
+  height: 100vh
 
 
 
@@ -23,7 +23,7 @@ body
   background-size: cover;
 
 
-#big-header
+#section-1
   padding: 0
   position: relative
   display: flex
