--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   main
-    section#big-header.section
+    section#section-1
       #header-container
         h1 Welcome to Makapala Website
         h2 Satu Nyawa, Gak Banyak-Banyak
