Add Contact html structure

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -11,8 +11,6 @@ section
   padding: 10px
   height: 100vh
 
-
-
 body
   margin: 0
   padding: 0
@@ -23,6 +21,7 @@ body
   background-size: cover;
 
 
+// sections
 #section-1
   padding: 0
   position: relative
@@ -59,7 +58,7 @@ body
     color: #fafafa
 
 #section-2
-  background-color: $turquoise
+  background-color: rgba(green,0.9)
 
 #section-3
   background-color: $peter-river
