--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -2,14 +2,16 @@
 
 normalize-css()
 base()
+border-box-html()
 
 // Global
 button
     button(rgba(#fff,0),large,#fff)
 
 section
-  padding: 10px
+  padding: 100px
   height: 100vh
+  color: #fff
 
 body
   margin: 0
@@ -64,8 +66,38 @@ body
   background-color: $peter-river
 
 #section-4
+  height: 80vh
   background-color: #666
+  #contact-container
+    display: flex
+    justify-content: space-between
 
+    #form
+      flex-grow: 1
+      input
+      textarea
+        border-radius: 4px
+        background-color: darken(#666, 20%)
+        border: none
+        padding: 10px
+        margin: 10px 0
+        width: 48%
+      textarea
+        width: 100%
+        resize: none
+        min-height: 150px
+      fieldset
+        border: none
+        width: 90%
+        padding: 0
+        margin-top: 10px
+      fieldset > div
+        display: flex
+        justify-content: space-between
+
+    #contacts-list
+      flex-grow: 1
+      padding: 0px 80px 20px 20px
 
 footer
   height: 10vh
