add forgotten image

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -19,7 +19,7 @@ body
 
   display: flex
   flex-direction: column
-  // background: url(https://static.pexels.com/photos/130111/pexels-photo-130111.jpeg) no-repeat bottom fixed;
+  background: url(https://static.pexels.com/photos/130111/pexels-photo-130111.jpeg) no-repeat bottom fixed;
   background-size: cover;
 
 
