styling contact info

--- a/assets/css/_heading.styl
+++ b/assets/css/_heading.styl
@@ -31,4 +31,7 @@
     align-items: center
     justify-content: space-between
     background-color: rgba(0, 0, 0, 0.18)
-    color: #fafafa
+    color: #757575
+    padding: 0 25px
+    #address
+      font-size: 14px
