--- a/assets/css/_contact.styl
+++ b/assets/css/_contact.styl
@@ -1,5 +1,5 @@
 #contact
-  height: 80vh
+  height: 90vh
   background-color: #666
   #contact-container
     display: flex
@@ -31,3 +31,10 @@
     #contacts-list
       flex-grow: 1
       padding: 0px 80px 20px 20px
+      #social-media
+        ul
+          list-style-type: none
+          margin:0
+          padding:0
+          li
+            display: inline
