--- a/views/_contact.jade
+++ b/views/_contact.jade
@@ -21,3 +21,9 @@ section#contact
         | 1234 Somewhere in Earth
         br
         Banda Aceh, Aceh, Indonesia
+      div#social-media
+        h3 Social Media
+        ul
+          li a
+          li a
+          li a
