add social media icon

--- a/views/_contact.jade
+++ b/views/_contact.jade
@@ -24,6 +24,6 @@ section#contact
       div#social-media
         h3 Social Media
         ul
-          li a
-          li a
-          li a
+          li: a(href='#'): img(src='img/twitter.svg')
+          li: a(href='#'): img(src='img/facebook.svg')
+          li: a(href='#'): img(src='img/instagram.svg')
