--- a/assets/css/_contact.styl
+++ b/assets/css/_contact.styl
@@ -38,3 +38,8 @@
           padding:0
           li
             display: inline
+            img
+              width: 35px
+              padding: 5px
+              background-color: white
+              margin: 0 5px
