--- a/views/_heading.jade
+++ b/views/_heading.jade
@@ -1,6 +1,6 @@
 section#heading
   #header-container
-    h1 Welcome to Makapala Website
+    h1 Welcome to Makapala
     h2 Satu Nyawa, Gak Banyak-Banyak
     button Tombol Video
   #info
