add about and event

--- a/views/_about.jade
+++ b/views/_about.jade
@@ -1,2 +1,9 @@
 section#about
     h2 Who are We?
+    .container
+        div
+            img(src='https://pbs.twimg.com/profile_images/630233790237900801/NzMqCLrT_400x400.jpg')
+        div
+            p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus veniam illum aliquam eligendi ipsa cum hic suscipit repudiandae sit impedit, atque rem odio aut, ratione. Voluptas nisi culpa tempore facere. Perferendis autem, laudantium modi pariatur, eveniet sequi accusamus commodi fugiat eligendi, totam obcaecati, est. Eos soluta delectus, a impedit praesentium dolorum officiis, quos minus recusandae expedita illo quidem ullam modi accusamus cupiditate dicta suscipit facere quam at? Molestiae eveniet quod, unde, placeat assumenda praesentium accusantium possimus totam, minima, iure ea.
+            p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, modi eligendi aspernatur odit, excepturi voluptatem ab deserunt tempora minima quaerat, perspiciatis adipisci maxime nemo sapiente quidem blanditiis pariatur commodi. Expedita quae non incidunt repellendus, voluptate accusamus placeat voluptatibus, atque eligendi.
+            p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda eaque vitae saepe cupiditate soluta debitis ullam odio tempore? Modi commodi vitae ratione facilis rem, fuga. Nisi, ab, aliquam. Sunt, quae!
