--- a/views/_event.jade
+++ b/views/_event.jade
@@ -1,2 +1,10 @@
 section#event
   h2 Upcoming Events
+  div
+    h3 Come and Join: Some Big Awfull Leadership Conference
+    p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis facere voluptatum aperiam ullam eligendi est, eos et esse labore recusandae nemo nihil velit quod, molestiae, a. Vel repellendus quisquam cumque.
+    p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, voluptatum.
+  div
+    h3 Come and Join II: Some Tiny Little Bird Learn to Fly Event
+    p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque sit vitae, ea, tenetur omnis velit quasi saepe commodi repudiandae vel. Reprehenderit saepe pariatur consectetur cumque tempore accusantium, quae veniam eaque, fugiat omnis cum officia est numquam fuga unde maxime commodi.
+    p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolorum cumque deserunt aut autem deleniti, fugit? Aliquam, totam, eaque! Velit!
